[RED] Change data type for Schedule ID and Caregiver ID